fix button hover on mobile

--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,8 @@ h2{
     color: var(--light);
 }
 
+
+
 .settings{
     height:94vh;
     width:400px;
@@ -395,6 +397,18 @@ h2{
         background-color: var(--light);
     }
 
+    .btn:hover{
+        background-color: var(--light);
+        color: var(--dark);
+    }
+
+
+
+    .btn.active{
+        background-color:var(--dark);
+        color:var(--light);
+    }
+
     .stats-row{
         margin-bottom:5px;
     }
@@ -431,6 +445,11 @@ h2{
 }
 
 @media (max-width: 767px) { 
+
+    .btn.active{
+        background-color:var(--dark);
+        color:var(--light);
+    }
 
 
 
